Further patches to plugin side