@@ -17,15 +17,14 @@ import org.jetbrains.annotations.Nullable;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
+import java.io.IOException;
 import java.io.OutputStream;
 import java.util.Collections;
 import java.util.List;
 import java.util.logging.Logger;
 import java.util.logging.Level;
 
-/**
- * Hybrid Bridge JavaPlugin implementation.
- */
+
 public abstract class JavaPlugin extends PluginBase implements org.bukkit.command.TabExecutor {
     private boolean isEnabled = false;
     protected org.bukkit.plugin.PluginLoader loader;
@@ -40,13 +39,32 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
     private FileConfiguration newConfig;
     private File configFile;
     private io.papermc.paper.plugin.lifecycle.event.LifecycleEventManager<org.bukkit.plugin.Plugin> lifecycleManager;
+    private boolean allowsLifecycleRegistration = true;
 
     protected JavaPlugin() {
-        final ClassLoader classLoader = this.getClass().getClassLoader();
-        if (!(classLoader instanceof PluginClassLoader)) {
-            throw new IllegalStateException("JavaPlugin requires " + PluginClassLoader.class.getName());
+        // Paper widened this from CraftBukkit's "instanceof PluginClassLoader" to any
+        // ConfiguredPluginClassLoader, because its own plugin system loads paper-plugin.yml
+        // plugins through PaperPluginClassLoader instead. LunarArc has both loaders too, so
+        // keeping the narrow check rejected every paper-plugin.yml plugin whose main class
+        // extends JavaPlugin - Veinminer died here with "JavaPlugin requires
+        // org.bukkit.plugin.java.PluginClassLoader" before it could load.
+        if (this.getClass().getClassLoader()
+                instanceof io.papermc.paper.plugin.provider.classloader.ConfiguredPluginClassLoader configuredPluginClassLoader) {
+            configuredPluginClassLoader.init(this);
+        } else {
+            throw new IllegalStateException("JavaPlugin requires to be created by a valid classloader.");
         }
-        ((PluginClassLoader) classLoader).initialize(this);
+    }
+
+    /**
+     * Returns the plugin jar file. Bukkit/Spigot expose this to subclasses as a
+     * protected final method, so the inherited binary contract is preserved here.
+     */
+    protected final @NotNull File getFile() {
+        if (file == null) {
+            throw new IllegalStateException("Plugin has not been initialized");
+        }
+        return file;
     }
 
     @Override
@@ -104,32 +122,26 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         }
 
         resourcePath = resourcePath.replace('\\', '/');
-        InputStream in = getResource(resourcePath);
-        if (in == null) {
-            throw new IllegalArgumentException("The embedded resource '" + resourcePath + "' cannot be found");
-        }
-
         File outFile = new File(dataFolder, resourcePath);
         int lastIndex = resourcePath.lastIndexOf('/');
         File outDir = new File(dataFolder, resourcePath.substring(0, lastIndex >= 0 ? lastIndex : 0));
 
-        if (!outDir.exists()) {
-            outDir.mkdirs();
+        if (!outDir.exists() && !outDir.mkdirs() && !outDir.isDirectory()) {
+            throw new IllegalStateException("Could not create plugin data directory " + outDir);
         }
 
-        try {
-            if (!outFile.exists() || replace) {
-                OutputStream out = new FileOutputStream(outFile);
-                byte[] buf = new byte[1024];
-                int len;
-                while ((len = in.read(buf)) > 0) {
-                    out.write(buf, 0, len);
-                }
-                out.close();
-                in.close();
+        try (InputStream in = getResource(resourcePath)) {
+            if (in == null) {
+                throw new IllegalArgumentException("The embedded resource '" + resourcePath + "' cannot be found");
             }
-        } catch (Exception ex) {
-            logger.severe("Could not save " + outFile.getName() + " to " + outFile);
+            if (!outFile.exists() || replace) {
+                try (OutputStream out = new FileOutputStream(outFile)) {
+                    in.transferTo(out);
+                }
+            }
+        } catch (IOException ex) {
+            logger.log(java.util.logging.Level.SEVERE,
+                    "Could not save " + outFile.getName() + " to " + outFile, ex);
         }
     }
 
@@ -169,15 +181,27 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         if (isEnabled != enabled) {
             isEnabled = enabled;
             if (isEnabled) {
-                logger.info("Enabling " + getDescription().getFullName());
-                onEnable();
+                if (io.ampznetwork.lunararc.common.config.LunarArcConfig.isQuietConsole()) {
+                    logger.fine("Enabling " + getDescription().getFullName());
+                } else {
+                    logger.info("Enabling " + getDescription().getFullName());
+                }
+                try {
+                    onEnable();
+                } finally {
+                    this.allowsLifecycleRegistration = false;
+                }
             } else {
-                logger.info("Disabling " + getDescription().getFullName());
+                if (io.ampznetwork.lunararc.common.config.LunarArcConfig.isQuietConsole()) {
+                    logger.fine("Disabling " + getDescription().getFullName());
+                } else {
+                    logger.info("Disabling " + getDescription().getFullName());
+                }
                 try {
                     onDisable();
                 } catch (Throwable t) {
-                    // Guard: onDisable() must never propagate — a crash here would
-                    // mask the original onEnable() exception (e.g. handleCrash pattern).
+
+
                     logger.log(java.util.logging.Level.SEVERE,
                             "Error in onDisable() for " + getDescription().getFullName(), t);
                 }
@@ -197,9 +221,16 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         return null;
     }
 
+
     /**
-     * Internal Paper 1.21.1 initialization method.
+     * Bukkit declares this on JavaPlugin and plugins call it - ProtocolLib does so in onLoad, and
+     * without it got NoSuchMethodError before it could initialize. It was simply missing here.
      */
+    @NotNull
+    protected final ClassLoader getClassLoader() {
+        return this.classLoader;
+    }
+
     public final void init(@NotNull Server server, @NotNull PluginDescriptionFile description, @NotNull File dataFolder,
             @NotNull File file, @NotNull ClassLoader classLoader, @NotNull PluginMeta pluginMeta,
             @NotNull Logger logger) {
@@ -212,11 +243,15 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         this.logger = logger;
         this.configFile = new File(dataFolder, "config.yml");
 
-        this.lifecycleManager = io.ampznetwork.lunararc.common.server.LunarArcLifecycleEventManager.create();
-        if (!(classLoader instanceof PluginClassLoader pluginClassLoader)) {
-            throw new IllegalArgumentException("Plugin class loader is not a PluginClassLoader");
+        this.lifecycleManager = io.ampznetwork.lunararc.common.server.LunarArcLifecycleEventManager.create(
+                this, () -> this.allowsLifecycleRegistration);
+        // Only the classic loader has a JavaPluginLoader behind it. Paper treats getPluginLoader()
+        // as a deprecated legacy concept and a paper-plugin.yml plugin has none, so its absence is
+        // normal rather than an error - throwing here rejected every paper plugin outright, which
+        // is what stopped Veinminer loading even after its constructor was let through.
+        if (classLoader instanceof PluginClassLoader pluginClassLoader) {
+            this.loader = pluginClassLoader.getPluginLoaderInstance();
         }
-        this.loader = pluginClassLoader.getPluginLoaderInstance();
     }
 
     @NotNull
@@ -225,10 +260,10 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
             throw new IllegalArgumentException("Class cannot be null");
         }
         ClassLoader classLoader = clazz.getClassLoader();
-        if (!(classLoader instanceof PluginClassLoader pluginClassLoader)) {
-            throw new IllegalArgumentException(clazz + " is not initialized by " + PluginClassLoader.class.getName());
+        if (!(classLoader instanceof io.papermc.paper.plugin.provider.classloader.ConfiguredPluginClassLoader configuredPluginClassLoader)) {
+            throw new IllegalArgumentException(clazz + " is not initialized by a " + io.papermc.paper.plugin.provider.classloader.ConfiguredPluginClassLoader.class);
         }
-        JavaPlugin plugin = pluginClassLoader.getPluginInstance();
+        JavaPlugin plugin = configuredPluginClassLoader.getPlugin();
         if (plugin == null) {
             throw new IllegalStateException("Cannot get plugin for " + clazz + " before it is initialized");
         }
@@ -241,10 +276,10 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
             throw new IllegalArgumentException("Class cannot be null");
         }
         ClassLoader classLoader = clazz.getClassLoader();
-        if (!(classLoader instanceof PluginClassLoader pluginClassLoader)) {
-            throw new IllegalArgumentException(clazz + " is not provided by a plugin");
+        if (!(classLoader instanceof io.papermc.paper.plugin.provider.classloader.ConfiguredPluginClassLoader configuredPluginClassLoader)) {
+            throw new IllegalArgumentException(clazz + " is not provided by a " + io.papermc.paper.plugin.provider.classloader.ConfiguredPluginClassLoader.class);
         }
-        JavaPlugin plugin = pluginClassLoader.getPluginInstance();
+        JavaPlugin plugin = configuredPluginClassLoader.getPlugin();
         if (plugin == null) {
             throw new IllegalStateException("Cannot get providing plugin for " + clazz + " before it is initialized");
         }
@@ -262,9 +297,9 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         if (command instanceof org.bukkit.command.PluginCommand pc && pc.getPlugin() == this) {
             return pc;
         }
-        // Fallback: try to find it in the description if it's not registered yet
+
         if (description.getCommands() != null && description.getCommands().containsKey(search)) {
-            // Return a proxy if needed, but usually it should be in the command map
+
         }
         return null;
     }
@@ -279,7 +314,8 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
     }
 
     public @NotNull List<String> getPluginLibraries() {
-        return Collections.emptyList();
+        List<String> libraries = description.getLibraries();
+        return libraries == null || libraries.isEmpty() ? Collections.emptyList() : List.copyOf(libraries);
     }
 
     public @NotNull Logger getLogger() {
